<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.qrboard.ExploreActivity" >
    
<com.example.qrboard.QRExplorer android:id="@+id/qr_explorer"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"/>

<Button
    android:id="@+id/explorerbutton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_marginBottom="72dp"
    android:layout_marginLeft="50dp"
    android:text="@string/explorer_button_text" 
    android:visibility="invisible"/>

<TextView
    android:id="@+id/explorereditifo"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/explorerbutton"
    android:layout_alignRight="@+id/explorerbutton"
    android:text="@string/explorer_edit_info_text"
    android:textAppearance="?android:attr/textAppearanceSmall" 
    android:visibility="invisible"/>

<ImageView
    android:id="@+id/explorereditifoimage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/explorerbutton"
    android:layout_alignLeft="@+id/explorerbutton"
    android:src="@drawable/abc_ic_commit_search_api_mtrl_alpha"
    android:visibility="invisible" />

<Button
    android:id="@+id/explorequitbutton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_marginBottom="28dp"
    android:text="@string/explorer_back_button_text" />

</RelativeLayout>
