<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="@dimen/standard_padding" >

    <com.example.qrboard.QRSquareUserEditorView
        android:id="@+id/esu_squaresurfaceView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/esu_cancel_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/esu_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/esu_cancel_button_text" />

    <Button
        android:id="@+id/esu_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/esu_ok_button_text" />

    <TextView
        android:id="@+id/esu_youtextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/esu_you"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/esu_yourroletextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/esu_youtextview"
        android:layout_centerHorizontal="true"
        android:text="Large Text"
        android:layout_marginTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

   

    <TextView
        android:id="@+id/esu_othertextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/esu_yourroletextview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
     <Spinner
        android:id="@+id/esu_rolespinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/esu_othertextview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:popupBackground="@drawable/menu_ourcolor"
        android:background="@drawable/spinner_bg" 
        />

</RelativeLayout>